CHANGES IN FLTK 1.1.7

	- fixed frame drawing of Fl_Text_Display (STR #762.2)
	- Documentation fixes (STR #648, STR #692, STR #730, STR
	  #744, STR #745)
	- Fl_Clock_Output::value() did not return the previously
	  set value (STR #748)
	- Added comment type to FLUID. This is useful for
	  generating copyright notices in the source and header
	  files.
	- Fl_Valuator would not format text output with decimal 
	  point when the step value was fractional, but above 1.
	- fl_filename_relative() didn't compare drive letters in
	  a case-insensitive way (STR #741)
	- Fixed menu item width calculations with symbols (STR
	  #740)
	- The keyboard shortcut handling code did not handle
	  8-bit characters properly (STR #731)
	- Fl_JPEG_Image could still crash an app with a corrupt
	  JPEG file (STR #739)
	- Using the layout alignment controls on a menu widget
	  would cause FLUID to crash (STR #742)
	- Added QNX bug workaround for menu handling (STR #704)
	- Added Greg Ercolano's simple Fl_Input_Choice widget
	  which is a combination of the Fl_Input and
	  Fl_Menu_Button widgets (STR #650)
	- Fl_Multiline_Input now scrolls the full height of the
	  widget instead of 5 lines when the user presses PageUp
	  or PageDown (STR #727)
	- CMake build fixes (STR #724)
	- Fl_Browser::swap() didn't handle redraws properly when
	  the swapped lines had different heights (STR #729)
	- FL_MOUSEWHEEL events are now sent first to the widget
	  under the mouse pointer and then to the first widget
	  which accepts them. This is similar to the way
	  shortcut events are handled and is consistent with the
	  way the mouse wheel is handled by other toolkits.
	- Fl::wait() could block on WIN32 if the window was
	  deleted via Fl::delete_widget() (STR #679)
	- Fl_Preferences::RootNode did not find the user's home
	  directory on some non-US versions of Windows (STR
	  #720)
	- Fl_Window::hide() didn't delete the current clipping
	  region on WIN32, causing a GDI resource leak in some