@@ -1,8 +1,12 @@
 CHANGES IN FLTK 1.1.7
 
-	- fixed frame drawing of Fl_Text_Display (STR #762.2)
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Added Edit/Duplicate command to FLUID to duplicate the
+	  current selection.
+	- FLUID now tracks the current state of the widget bin
+	  and overlay using menu item checks.
+	- Fixed frame drawing of Fl_Text_Display (STR #762)
 	- Fl_Clock_Output::value() did not return the previously
 	  set value (STR #748)
 	- Added comment type to FLUID. This is useful for
